--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^10.0.1",
+    "pipeline": "^0.1.3",
     "postcss": "^8.4.12",
     "postcss-csso": "^6.0.0",
     "postcss-scss": "^4.0.3",
