Убрал лишние атрибуты для спрайтовых иконок и стилизовал их с помощью fill

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "gulp",
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\"",
-    "images": "gulp images",
+    "images": "gulp optimizeImages",
     "webp": "gulp createWebp",
     "sprite": "gulp createSprite",
     "html": "gulp minifyHTML",
